2012-07-06 Borut Razem <borut.razem AT gmail.com>

	* src/pic16/main.c: bug patched with sdcc-3.2.0-config_fix.diff
	  #3539804 - #pragma config and certain string constants,
	  thanks to Herbert Potzl

2012-06-30 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/sdcc.nsi:
	  fixed 'Installer suggest "C:\Program Files\SDCC" instead of
	  "C:\Program Files (x86)\SDCC"' problem

2012-06-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peep.c:
	  Fix out-of-array read.

2012-06-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdcc.sln,
	* sdas/asrab/asrab.vcxproj: renamed output to sdasrab
	* all.vcxproj: added sdasrab.exe and sdldrab.exe
	* src/sdcc.vcxproj: removed parsing SDCC.y
	* src/yacc.vcxproj: cosmetics
	* sdas/as6808/m6808.h,
	* sdas/as8051/i8051.h,
	* sdas/asgb/gb.h,
	* sdas/asrab/rabbit.h,
	* sdas/asz80/z80.h: removed (conflicting) prototypes for machine and minit
	* src/hc08/ralloc.c (packRegisters): fixed bug indicated by a warning
	* src/pic14/gen.c (genDataPointerGet, genConstPointerGet),
	* src/pic14/genarith.c (genAddLit),
	* src/pic14/glue.c (pic14_constructAbsMap, emitInitVal)
	* src/pic16/device.h (PIC16_device),
	* src/pic16/gen.c (pic16_storeForReturn, genAnd, genXor, genAssign),
	* src/pic16/glue.c (pic16_printIvalType, pic16_printIvalChar,
	  pic16_printIvalBitFields, pic16_printIvalUnion),
	* src/z80/ralloc2.cc (iy_reserved, Ainst_ok, omit_frame_ptr): fixed warnings

2012-06-27 Borut Razem <borut.razem AT gmail.com>

	* src/SDCC.lex:
	  unescape file names from preprocessor, 2nd and 3rd try
	* device/non-free/lib/pic16/libdev/Makefile.am,
	  device/non-free/lib/pic16/libdev/Makefile.in,
	  device/non-free/lib/pic14/libdev/Makefile.in:
	  gputils supports all devices supported by SDCC

2012-06-26 Borut Razem <borut.razem AT gmail.com>

	* src/SDCC.lex, src/SDCCerr.c, src/SDCCerr.h:
	  unescape file names from preprocessor

2012-06-25 Borut Razem <borut.razem AT gmail.com>

	* src/regression/Makefile: